@@ -26,7 +26,8 @@ import org.slf4j.LoggerFactory;
 public class RailsNamingStrategy implements NamingStrategy, Serializable {
 	private static final long serialVersionUID = -2656604564223895758L;
 
-	private static final Logger logger = LoggerFactory.getLogger(RailsNamingStrategy.class);
+	private static final Logger logger = LoggerFactory
+			.getLogger(RailsNamingStrategy.class);
 	/**
 	 * 是否对表名进行复数化
 	 */
@@ -53,7 +54,8 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 			tableName = tblPrefix + tableName;
 		}
 		if (tableName.length() > 30) {
-			logger.warn("{}'s length has greate more then 30, database will not be supported!",
+			logger.warn(
+					"{}'s length has greate more then 30, database will not be supported!",
 					tableName);
 		}
 		return tableName;
@@ -108,16 +110,20 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 	 * @param propertyName
 	 */
 	public String propertyToColumnName(String propertyName) {
-		StringBuilder sb = new StringBuilder(addUnderscores(unqualify(propertyName)));
-		if (!StringUtils.endsWithIgnoreCase(propertyName, "id") && isManyToOne()) {
+		StringBuilder sb = new StringBuilder(
+				addUnderscores(unqualify(propertyName)));
+		if (!StringUtils.endsWithIgnoreCase(propertyName, "id")
+				&& isManyToOne()) {
 			sb.append("_id");
 		}
 		return sb.toString();
 	}
 
-	public String collectionTableName(String ownerEntity, String ownerEntityTable,
-			String associatedEntity, String associatedEntityTable, String propertyName) {
-		return tableName(ownerEntityTable + '_') + addUnderscores(unqualify(propertyName));
+	public String collectionTableName(String ownerEntity,
+			String ownerEntityTable, String associatedEntity,
+			String associatedEntityTable, String propertyName) {
+		return tableName(ownerEntityTable + '_')
+				+ addUnderscores(unqualify(propertyName));
 	}
 
 	/**
@@ -130,10 +136,14 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 	/**
 	 * Return the property name or propertyTableName
 	 */
-	public String foreignKeyColumnName(String propertyName, String propertyEntityName,
-			String propertyTableName, String referencedColumnName) {
-		String header = null == propertyName ? propertyTableName : unqualify(propertyName);
-		if (header == null) { throw new AssertionFailure("NamingStrategy not properly filled"); }
+	public String foreignKeyColumnName(String propertyName,
+			String propertyEntityName, String propertyTableName,
+			String referencedColumnName) {
+		String header = null == propertyName ? propertyTableName
+				: unqualify(propertyName);
+		if (header == null) {
+			throw new AssertionFailure("NamingStrategy not properly filled");
+		}
 		return columnName(header) + "_" + referencedColumnName;
 	}
 
@@ -143,14 +153,15 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 	 * otherwise the concatenation of owner entity table and the unqualified
 	 * property name
 	 */
-	public String logicalCollectionTableName(String tableName, String ownerEntityTable,
-			String associatedEntityTable, String propertyName) {
+	public String logicalCollectionTableName(String tableName,
+			String ownerEntityTable, String associatedEntityTable,
+			String propertyName) {
 		if (tableName == null) {
 			// use of a stringbuilder to workaround a JDK bug
-			return new StringBuilder(ownerEntityTable).append("_")
-					.append(
-							associatedEntityTable == null ? unqualify(propertyName)
-									: associatedEntityTable).toString();
+			return new StringBuilder(ownerEntityTable)
+					.append("_")
+					.append(associatedEntityTable == null ? unqualify(propertyName)
+							: associatedEntityTable).toString();
 		} else {
 			return tableName;
 		}
@@ -160,10 +171,10 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 	 * Return the column name if explicit or the concatenation of the property
 	 * name and the referenced column
 	 */
-	public String logicalCollectionColumnName(String columnName, String propertyName,
-			String referencedColumn) {
-		return StringHelper.isNotEmpty(columnName) ? columnName : unqualify(propertyName) + "_"
-				+ referencedColumn;
+	public String logicalCollectionColumnName(String columnName,
+			String propertyName, String referencedColumn) {
+		return StringHelper.isNotEmpty(columnName) ? columnName
+				: unqualify(propertyName) + "_" + referencedColumn;
 	}
 
 	public Pluralizer getPluralizer() {
@@ -205,7 +216,8 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 	private void checkNewEntity() {
 		StackTraceElement[] trace = Thread.currentThread().getStackTrace();
 		if (trace.length > 4) {
-			if (trace[3].getMethodName().equals("getClassTableName")) {
+			if (trace[3].getMethodName().equals("getClassTableName")
+					|| trace[4].getMethodName().equals("getClassTableName")) {
 				this.tblPrefix = null;
 			}
 		}
@@ -220,7 +232,9 @@ public class RailsNamingStrategy implements NamingStrategy, Serializable {
 		StackTraceElement[] trace = Thread.currentThread().getStackTrace();
 		if (trace.length >= 7) {
 			for (int i = 5; i <= 7; i++) {
-				if (trace[i].getMethodName().equals("bindManyToOne")) { return true; }
+				if (trace[i].getMethodName().equals("bindManyToOne")) {
+					return true;
+				}
 			}
 		}
 		return false;
