@@ -66,8 +66,8 @@
 	</package>
 	
 	<bean type="com.opensymphony.xwork2.UnknownHandler" class="org.beangle.struts2.convention.ConventionRouteHandler"/>
-	<!--mapper-->
 	
+	<!--mapper-->
 	<bean type="org.apache.struts2.dispatcher.mapper.ActionMapper" name="beangle" class="org.beangle.struts2.convention.mapper.ConventionActionMapper"/>
 	
 	<!--config-->
